# TickApp

./: .dockerignore  .gitignore  Dockerfile.dagster  LICENSE  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  pyproject_old.toml
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/schedules/: schedules.db
dashboard/: COLOR_PALETTES.md  Dockerfile  QUICKSTART.md  README.md  app.py  config.py  data.py  dev.sh  test_docker.sh
dashboard/.streamlit/: config.toml
dashboard/assets/: Styles.css
dashboard/components/: __init__.py  sidebar.py  styles.py
dashboard/pages/: 1_🏠_Dashboard.py  2_📊_Analytics.py  3_🏪_Stores.py  4_📂_Categories.py  5_📋_History.py  6_💳_Transactions.py  7_⚙️_Settings.py  __init__.py  analytics.py  categories.py  dashboard.py  history.py  settings.py  stores.py  transactions.py
docs/: signal.md
notebooks/: claude_client.ipynb  singal_client.ipynb  transform_claude_msg.ipynb  transform_signal_msg.ipynb
pg/: .$data_model.drawio.bkp  data_model.drawio  init_db.sh
pg/init_scripts/: 01-creation-tables.sql  02-post-creation.sql  03-creation-views.sql  04-sample-data.sql  05-creation-views.sql  06-creation-infra-metabase.sql
pg/old/: 01-create-tables.sql  table.sql
scripts/: check_signal_group.py
tests/: signal_tests.py
tickapp/: dagster_entrypoint.py  models.py
tickapp/assets/: README.md  __init__.py  claude.py  db.py  message_pipeline.py  signal.py  transform.py
tickapp/assets_checks/: __init__.py  claude.py  db.py  message_pipeline.py  signal.py  transform.py
tickapp/prompts/: tickets.txt  (+1 more)
(+30 files in other folders)
